--- a/app/src/main/res/layout/adapter_simple_project.xml
+++ b/app/src/main/res/layout/adapter_simple_project.xml
@@ -8,19 +8,22 @@
             name="simpleOject"
             type="com.nickagas.databindingtestmvvm.SimpleObject"/>
     </data>
+
     <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:text="@{simpleOject.name}"/>
+            android:text="@{simpleOject.name}" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{simpleOject.age}"/>
-        
+            android:text="@{simpleOject.age}" />
+
     </LinearLayout>
 </layout>
