--- a/app/src/main/res/layout/adapter_simple_project.xml
+++ b/app/src/main/res/layout/adapter_simple_project.xml
@@ -7,7 +7,11 @@
         <variable
             name="simpleOject"
             type="com.nickagas.databindingtestmvvm.SimpleObject"/>
+        <variable
+            name="buttonHandler"
+            type="com.nickagas.databindingtestmvvm.ThirdActivityHandler"/>
     </data>
+
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -23,7 +27,17 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/age"
             android:text="@{simpleOject.age}" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+
+            android:onClick="@{buttonHandler::onClickButton}"/>
+
 
     </LinearLayout>
 </layout>
